# LBPOpenMp

./: .gitignore  CMakeLists.txt  LocalBinaryPattern.cpp  LocalBinaryPattern.h  README.md  execTimeTests.cpp  execTimeTests.h  main.cpp  runTests.cpp  writeCsv.cpp  writeCsv.h
